# bvs_android

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: about.html  license.html  privacy_policy.html  style.css
app/src/main/res/layout/: activity_main.xml  camera.xml  document.xml  document_viewer.xml  fragment_blank.xml  fragment_viewer.xml  info_animation.xml  info_image.xml  instruction.xml  instruction_viewer.xml  main.xml  menu_header.xml  menu_header_layout.xml  preloader.xml  (+1 more)
camera/: build.gradle
camera/src/main/: AndroidManifest.xml
documents/: build.gradle
eventbusmessages/src/main/: AndroidManifest.xml
firstlaunch/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
handytools/: build.gradle
handytools/src/main/: AndroidManifest.xml
httpConnection/: build.gradle
httpConnection/src/main/: AndroidManifest.xml
instructions/: build.gradle
instructions/src/main/: AndroidManifest.xml
menupages/: build.gradle
menupages/src/main/: AndroidManifest.xml
mikotools/: build.gradle  proguard-rules.pro
mikotools/src/main/: AndroidManifest.xml
model3D/: build.gradle
model3D/src/main/: AndroidManifest.xml
networkcontroller/: build.gradle  proguard-rules.pro
networkcontroller/src/main/: AndroidManifest.xml
serverconnection/src/main/: AndroidManifest.xml
viewer3D/: build.gradle
viewer3D/src/main/: AndroidManifest.xml
viewer3D/src/main/cpp/: CMakeLists.txt  ModelData.cpp  ModelData.h  ModelLoader.cpp  ModelLoader.h  native-lib.cpp
viewer3d/: build.gradle
(+218 files in other folders)
